[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hesperides"
version = "0.2.0"
description = "Library for derivatives pricing"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = ["numpy>=2.0.0"]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-timeout>=2.2", "build>=1.2"]

[tool.setuptools.packages.find]
include = ["hesperides*"]

[tool.pytest.ini_options]
markers = ["regression: regression tests"]