[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "derivatives-pricing"
version = "0.1.0"
description = "Classical derivatives pricing methods in Python"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = ["numpy>=2.0.0", "scipy>=1.15"]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-timeout>=2.2", "build>=1.2"]
docs = [
    "sphinx>=8",
    "furo>=2024.8.6",
    "myst-parser>=4",
    "sphinx-autodoc-typehints>=2",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.6",
]

[tool.setuptools.packages.find]
include = ["derivatives_pricing*"]

[tool.pytest.ini_options]
markers = ["regression: regression tests"]
